# turbohead

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
csrc/: build.sh  turbohead_op.cc
docs/: DIFFERENCE_OURS_VS_FLASHEAD.md  FUSED_HEAD_INT8.md  HEAD_QUANT_CONFIGS.md  IDEAS.md  NEXT_STEPS.md  ORT_QUIRKS.md  PLAN.md  RELATED.md  RESULTS.md  THESIS_ADAPTIVE_PROBING.md
experimental/: README.md
experimental/anisotropic_clustering/: LOG.md  README.md  anisotropic_clustering_poc.py
experimental/buffershare/: buffershare_poc.py
experimental/combinations/: LOG.md  README.md  aniso_x_multiassign_poc.py
experimental/coverage_correction/: README.md  coverage_correction_poc.py
experimental/dataaware_routing/: dataaware_routing_poc.py
experimental/factorized_router/: LOG.md  README.md  factorized_router_poc.py
experimental/ffn_sparsity/: README.md  ffn_sparsity_poc.py
experimental/genai_kv/: genai_kv_poc.py
experimental/graph_mips/: graph_mips_poc.py
experimental/kv_scaling/: kv_scaling_poc.py
experimental/l2s/: l2s_poc.py
experimental/learned_metric/: LOG.md  README.md  learned_metric_poc.py
experimental/mips_routing/: mips_routing_poc.py
experimental/multiple_assignment/: LOG.md  README.md  build_r2.py  cost_matched_real_build_poc.py  multiple_assignment_poc.py
experimental/recall_lift/: LOG.md  frontier_poc.py  recall_lift_poc.py
experimental/targeted_second_home/: LOG.md  README.md  targeted_second_home_poc.py
experimental/whisper_head/: README.md  build_whisper.py  sweep.py  whisper_decode.py  whisper_head_poc.py
experimental/whitened_routing/: LOG.md  README.md  whitened_routing_poc.py
logs/: adaptive_probe_headroom.py  hierarchical_stage1_poc.py  recall_lift_poc.py
src/turbohead/eval/: agreement.py  benchmark.py
src/turbohead/inference/: decode_loop.py
src/turbohead/surgery/: build_all.sh  build_clusters.py  build_subgraph.py  calibrate_misses.py  convert_baseline.sh  extract_head.py  splice.py
tests/: test_calibrate.py  test_clusters.py  test_decode_integration.py  test_select.py  test_subgraph.py
turbohead/eval/: agreement.py  benchmark.py  head_quality.py  ppl.py
turbohead/inference/: decode_loop.py
turbohead/surgery/: _genai_build.py  build_all.sh  build_clusters.py  build_subgraph.py  calibrate_misses.py  convert_baseline.sh  extract_head.py  quantize_head.py  splice.py  splice_fused.py
